lib/presentablePolicyParser.js
// Generated from presentablePolicy.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var presentablePolicyListener = require('./presentablePolicyListener').presentablePolicyListener;
var grammarFileName = "presentablePolicy.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "','", "'in'", "'initial'", "'<initial>'", 
                     "'proceed to'", "'on'", "'and'", "'end of'", "'at'", 
                     "'after'", "'of contract creation'", "'price priceExpression'", 
                     "'receiving transaction of'", "'to'", "'contract_guaranty of'", 
                     "'refund after'", "'platform_guaranty of'", "'accepting license'", 
                     "'visit_increment of'", "'visit of'", "'account_balance greater than'", 
                     "'account_balance smaller than'", "'account_settled'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "TIMEUNIT", 
                      "FOR", "SELF", "GROUPUSER", "REGISTERED_USERS", "PUBLIC", 
                      "TERMINATE", "ID", "MOBILEPHONE", "EMAIL", "FEATHERACCOUNT", 
                      "TWO_DIGITS", "HOUR", "INTEGER_NUMBER", "DATE", "ALPHANUMERIC", 
                      "NIGHT_DIGITS", "FOUR_DIGITS", "WS" ];

var ruleNames =  [ "policy", "segment", "audience_clause", "state_clause", 
                   "initial_state_clause", "current_state_clause", "target_clause", 
                   "event", "and_event", "period_event", "specific_date_event", 
                   "relative_date_event", "pricing_agreement_event", "transaction_event", 
                   "guaranty_event", "contract_guaranty", "platform_guaranty", 
                   "signing_event", "access_count_event", "visit_increment_event", 
                   "visit_event", "balance_event", "balance_greater", "balance_smaller", 
                   "settlement_event", "license_resource_id", "users" ];

function presentablePolicyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

presentablePolicyParser.prototype = Object.create(antlr4.Parser.prototype);
presentablePolicyParser.prototype.constructor = presentablePolicyParser;

Object.defineProperty(presentablePolicyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

presentablePolicyParser.EOF = antlr4.Token.EOF;
presentablePolicyParser.T__0 = 1;
presentablePolicyParser.T__1 = 2;
presentablePolicyParser.T__2 = 3;
presentablePolicyParser.T__3 = 4;
presentablePolicyParser.T__4 = 5;
presentablePolicyParser.T__5 = 6;
presentablePolicyParser.T__6 = 7;
presentablePolicyParser.T__7 = 8;
presentablePolicyParser.T__8 = 9;
presentablePolicyParser.T__9 = 10;
presentablePolicyParser.T__10 = 11;
presentablePolicyParser.T__11 = 12;
presentablePolicyParser.T__12 = 13;
presentablePolicyParser.T__13 = 14;
presentablePolicyParser.T__14 = 15;
presentablePolicyParser.T__15 = 16;
presentablePolicyParser.T__16 = 17;
presentablePolicyParser.T__17 = 18;
presentablePolicyParser.T__18 = 19;
presentablePolicyParser.T__19 = 20;
presentablePolicyParser.T__20 = 21;
presentablePolicyParser.T__21 = 22;
presentablePolicyParser.T__22 = 23;
presentablePolicyParser.T__23 = 24;
presentablePolicyParser.TIMEUNIT = 25;
presentablePolicyParser.FOR = 26;
presentablePolicyParser.SELF = 27;
presentablePolicyParser.GROUPUSER = 28;
presentablePolicyParser.REGISTERED_USERS = 29;
presentablePolicyParser.PUBLIC = 30;
presentablePolicyParser.TERMINATE = 31;
presentablePolicyParser.ID = 32;
presentablePolicyParser.MOBILEPHONE = 33;
presentablePolicyParser.EMAIL = 34;
presentablePolicyParser.FEATHERACCOUNT = 35;
presentablePolicyParser.TWO_DIGITS = 36;
presentablePolicyParser.HOUR = 37;
presentablePolicyParser.INTEGER_NUMBER = 38;
presentablePolicyParser.DATE = 39;
presentablePolicyParser.ALPHANUMERIC = 40;
presentablePolicyParser.NIGHT_DIGITS = 41;
presentablePolicyParser.FOUR_DIGITS = 42;
presentablePolicyParser.WS = 43;

presentablePolicyParser.RULE_policy = 0;
presentablePolicyParser.RULE_segment = 1;
presentablePolicyParser.RULE_audience_clause = 2;
presentablePolicyParser.RULE_state_clause = 3;
presentablePolicyParser.RULE_initial_state_clause = 4;
presentablePolicyParser.RULE_current_state_clause = 5;
presentablePolicyParser.RULE_target_clause = 6;
presentablePolicyParser.RULE_event = 7;
presentablePolicyParser.RULE_and_event = 8;
presentablePolicyParser.RULE_period_event = 9;
presentablePolicyParser.RULE_specific_date_event = 10;
presentablePolicyParser.RULE_relative_date_event = 11;
presentablePolicyParser.RULE_pricing_agreement_event = 12;
presentablePolicyParser.RULE_transaction_event = 13;
presentablePolicyParser.RULE_guaranty_event = 14;
presentablePolicyParser.RULE_contract_guaranty = 15;
presentablePolicyParser.RULE_platform_guaranty = 16;
presentablePolicyParser.RULE_signing_event = 17;
presentablePolicyParser.RULE_access_count_event = 18;
presentablePolicyParser.RULE_visit_increment_event = 19;
presentablePolicyParser.RULE_visit_event = 20;
presentablePolicyParser.RULE_balance_event = 21;
presentablePolicyParser.RULE_balance_greater = 22;
presentablePolicyParser.RULE_balance_smaller = 23;
presentablePolicyParser.RULE_settlement_event = 24;
presentablePolicyParser.RULE_license_resource_id = 25;
presentablePolicyParser.RULE_users = 26;

function PolicyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_policy;
    return this;
}

PolicyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PolicyContext.prototype.constructor = PolicyContext;

PolicyContext.prototype.EOF = function() {
    return this.getToken(presentablePolicyParser.EOF, 0);
};

PolicyContext.prototype.segment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SegmentContext);
    } else {
        return this.getTypedRuleContext(SegmentContext,i);
    }
};

PolicyContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterPolicy(this);
	}
};

PolicyContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitPolicy(this);
	}
};




presentablePolicyParser.PolicyContext = PolicyContext;

presentablePolicyParser.prototype.policy = function() {

    var localctx = new PolicyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, presentablePolicyParser.RULE_policy);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===presentablePolicyParser.FOR) {
            this.state = 54;
            this.segment();
            this.state = 59;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 60;
        this.match(presentablePolicyParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_segment;
    return this;
}

SegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SegmentContext.prototype.constructor = SegmentContext;

SegmentContext.prototype.FOR = function() {
    return this.getToken(presentablePolicyParser.FOR, 0);
};

SegmentContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

SegmentContext.prototype.state_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(State_clauseContext);
    } else {
        return this.getTypedRuleContext(State_clauseContext,i);
    }
};

SegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterSegment(this);
	}
};

SegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitSegment(this);
	}
};




presentablePolicyParser.SegmentContext = SegmentContext;

presentablePolicyParser.prototype.segment = function() {

    var localctx = new SegmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, presentablePolicyParser.RULE_segment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.match(presentablePolicyParser.FOR);
        this.state = 64; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 63;
            this.audience_clause(0);
            this.state = 66; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 27)) & ~0x1f) == 0 && ((1 << (_la - 27)) & ((1 << (presentablePolicyParser.SELF - 27)) | (1 << (presentablePolicyParser.GROUPUSER - 27)) | (1 << (presentablePolicyParser.REGISTERED_USERS - 27)) | (1 << (presentablePolicyParser.PUBLIC - 27)) | (1 << (presentablePolicyParser.MOBILEPHONE - 27)) | (1 << (presentablePolicyParser.EMAIL - 27)))) !== 0));
        this.state = 68;
        this.match(presentablePolicyParser.T__0);
        this.state = 72;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===presentablePolicyParser.T__2) {
            this.state = 69;
            this.state_clause();
            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Audience_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_audience_clause;
    return this;
}

Audience_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Audience_clauseContext.prototype.constructor = Audience_clauseContext;

Audience_clauseContext.prototype.users = function() {
    return this.getTypedRuleContext(UsersContext,0);
};

Audience_clauseContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

Audience_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterAudience_clause(this);
	}
};

Audience_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitAudience_clause(this);
	}
};



presentablePolicyParser.prototype.audience_clause = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new Audience_clauseContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, presentablePolicyParser.RULE_audience_clause, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.users();
        this._ctx.stop = this._input.LT(-1);
        this.state = 83;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new Audience_clauseContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, presentablePolicyParser.RULE_audience_clause);
                this.state = 78;
                if (!( this.precpred(this._ctx, 1))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                }
                this.state = 79;
                this.match(presentablePolicyParser.T__1);
                this.state = 80;
                this.audience_clause(2); 
            }
            this.state = 85;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function State_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_state_clause;
    return this;
}

State_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
State_clauseContext.prototype.constructor = State_clauseContext;

State_clauseContext.prototype.initial_state_clause = function() {
    return this.getTypedRuleContext(Initial_state_clauseContext,0);
};

State_clauseContext.prototype.target_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Target_clauseContext);
    } else {
        return this.getTypedRuleContext(Target_clauseContext,i);
    }
};

State_clauseContext.prototype.current_state_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Current_state_clauseContext);
    } else {
        return this.getTypedRuleContext(Current_state_clauseContext,i);
    }
};

State_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterState_clause(this);
	}
};

State_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitState_clause(this);
	}
};




presentablePolicyParser.State_clauseContext = State_clauseContext;

presentablePolicyParser.prototype.state_clause = function() {

    var localctx = new State_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, presentablePolicyParser.RULE_state_clause);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.initial_state_clause();
        this.state = 88; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 87;
            this.target_clause();
            this.state = 90; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===presentablePolicyParser.T__5 || _la===presentablePolicyParser.TERMINATE);
        this.state = 100;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 92;
                this.current_state_clause();
                this.state = 94; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    this.state = 93;
                    this.target_clause();
                    this.state = 96; 
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while(_la===presentablePolicyParser.T__5 || _la===presentablePolicyParser.TERMINATE); 
            }
            this.state = 102;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Initial_state_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_initial_state_clause;
    return this;
}

Initial_state_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Initial_state_clauseContext.prototype.constructor = Initial_state_clauseContext;


Initial_state_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterInitial_state_clause(this);
	}
};

Initial_state_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitInitial_state_clause(this);
	}
};




presentablePolicyParser.Initial_state_clauseContext = Initial_state_clauseContext;

presentablePolicyParser.prototype.initial_state_clause = function() {

    var localctx = new Initial_state_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, presentablePolicyParser.RULE_initial_state_clause);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103;
        this.match(presentablePolicyParser.T__2);
        this.state = 104;
        _la = this._input.LA(1);
        if(!(_la===presentablePolicyParser.T__3 || _la===presentablePolicyParser.T__4)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 105;
        this.match(presentablePolicyParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Current_state_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_current_state_clause;
    return this;
}

Current_state_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Current_state_clauseContext.prototype.constructor = Current_state_clauseContext;

Current_state_clauseContext.prototype.ID = function() {
    return this.getToken(presentablePolicyParser.ID, 0);
};

Current_state_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterCurrent_state_clause(this);
	}
};

Current_state_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitCurrent_state_clause(this);
	}
};




presentablePolicyParser.Current_state_clauseContext = Current_state_clauseContext;

presentablePolicyParser.prototype.current_state_clause = function() {

    var localctx = new Current_state_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, presentablePolicyParser.RULE_current_state_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(presentablePolicyParser.T__2);
        this.state = 108;
        this.match(presentablePolicyParser.ID);
        this.state = 109;
        this.match(presentablePolicyParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Target_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_target_clause;
    return this;
}

Target_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Target_clauseContext.prototype.constructor = Target_clauseContext;

Target_clauseContext.prototype.ID = function() {
    return this.getToken(presentablePolicyParser.ID, 0);
};

Target_clauseContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

Target_clauseContext.prototype.and_event = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(And_eventContext);
    } else {
        return this.getTypedRuleContext(And_eventContext,i);
    }
};

Target_clauseContext.prototype.TERMINATE = function() {
    return this.getToken(presentablePolicyParser.TERMINATE, 0);
};

Target_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterTarget_clause(this);
	}
};

Target_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitTarget_clause(this);
	}
};




presentablePolicyParser.Target_clauseContext = Target_clauseContext;

presentablePolicyParser.prototype.target_clause = function() {

    var localctx = new Target_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, presentablePolicyParser.RULE_target_clause);
    var _la = 0; // Token type
    try {
        this.state = 121;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case presentablePolicyParser.T__5:
            this.enterOuterAlt(localctx, 1);
            this.state = 111;
            this.match(presentablePolicyParser.T__5);
            this.state = 112;
            this.match(presentablePolicyParser.ID);
            this.state = 113;
            this.event();
            this.state = 117;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===presentablePolicyParser.T__7) {
                this.state = 114;
                this.and_event();
                this.state = 119;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case presentablePolicyParser.TERMINATE:
            this.enterOuterAlt(localctx, 2);
            this.state = 120;
            this.match(presentablePolicyParser.TERMINATE);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_event;
    return this;
}

EventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EventContext.prototype.constructor = EventContext;

EventContext.prototype.period_event = function() {
    return this.getTypedRuleContext(Period_eventContext,0);
};

EventContext.prototype.specific_date_event = function() {
    return this.getTypedRuleContext(Specific_date_eventContext,0);
};

EventContext.prototype.relative_date_event = function() {
    return this.getTypedRuleContext(Relative_date_eventContext,0);
};

EventContext.prototype.pricing_agreement_event = function() {
    return this.getTypedRuleContext(Pricing_agreement_eventContext,0);
};

EventContext.prototype.transaction_event = function() {
    return this.getTypedRuleContext(Transaction_eventContext,0);
};

EventContext.prototype.guaranty_event = function() {
    return this.getTypedRuleContext(Guaranty_eventContext,0);
};

EventContext.prototype.signing_event = function() {
    return this.getTypedRuleContext(Signing_eventContext,0);
};

EventContext.prototype.access_count_event = function() {
    return this.getTypedRuleContext(Access_count_eventContext,0);
};

EventContext.prototype.balance_event = function() {
    return this.getTypedRuleContext(Balance_eventContext,0);
};

EventContext.prototype.settlement_event = function() {
    return this.getTypedRuleContext(Settlement_eventContext,0);
};

EventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterEvent(this);
	}
};

EventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitEvent(this);
	}
};




presentablePolicyParser.EventContext = EventContext;

presentablePolicyParser.prototype.event = function() {

    var localctx = new EventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, presentablePolicyParser.RULE_event);
    try {
        this.state = 138;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 123;
            this.match(presentablePolicyParser.T__6);
            this.state = 124;
            this.period_event();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 125;
            this.specific_date_event();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 126;
            this.relative_date_event();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 127;
            this.pricing_agreement_event();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 128;
            this.match(presentablePolicyParser.T__6);
            this.state = 129;
            this.transaction_event();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 130;
            this.guaranty_event();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 131;
            this.match(presentablePolicyParser.T__6);
            this.state = 132;
            this.signing_event();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 133;
            this.match(presentablePolicyParser.T__6);
            this.state = 134;
            this.access_count_event();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 135;
            this.match(presentablePolicyParser.T__6);
            this.state = 136;
            this.balance_event();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 137;
            this.settlement_event();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function And_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentablePolicyParser.RULE_and_event;
    return this;
}

And_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
And_eventContext.prototype.constructor = And_eventContext;

And_eventContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

And_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.enterAnd_event(this);
	}
};

And_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentablePolicyListener ) {
        listener.exitAnd_event(this);
	}
};




presentablePolicyParser.And_eventContext = And_eventContext;
